--- a/02_basics/01_tensor.ipynb
+++ b/02_basics/01_tensor.ipynb
@@ -21,14 +21,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krakowiakpawel9/neural-network-course/blob/master/02_basics/01_tensor.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MikolajWasowski/neural-network-course/blob/master/02_basics/01_tensor.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RimajeFbTlL_",
-        "colab_type": "text"
+        "id": "RimajeFbTlL_"
       },
       "source": [
         "* @author: krakowiakpawel9@gmail.com  \n",
@@ -38,8 +37,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pl9Crb8V7DJC",
-        "colab_type": "text"
+        "id": "pl9Crb8V7DJC"
       },
       "source": [
         "### Spis treści\n",
@@ -53,8 +51,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CkqfVl6slWDv",
-        "colab_type": "text"
+        "id": "CkqfVl6slWDv"
       },
       "source": [
         "### <a name='a0'></a> 1. Import bibliotek"
@@ -63,35 +60,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_WTOYPJ7lVs5",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_WTOYPJ7lVs5"
       },
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pLHn8AAxlg5f",
-        "colab_type": "text"
+        "id": "pLHn8AAxlg5f"
       },
       "source": [
-        "### <a name='a1'> </a> 2. Skalar "
+        "### <a name='a1'> </a> 2. Skalar"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9-_4-IVClfme",
-        "colab_type": "code",
-        "outputId": "28173fdf-1a1b-41b8-b9bb-90988310053c",
+        "outputId": "9fb68f9d-19ba-4cdc-c337-8a2008a0ffdb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -99,15 +91,15 @@
         "print(scalar)\n",
         "print(type(scalar))"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "3\n",
             "<class 'int'>\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -115,11 +107,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "8wGfoHv88M9k",
-        "colab_type": "code",
-        "outputId": "5d58bc24-470f-4ff1-dbec-b8dedbd2a586",
+        "outputId": "629a4022-49bd-4e65-8782-f067789bc1d0",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -127,23 +117,22 @@
         "print(scalar)\n",
         "print(type(scalar))"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "3.0\n",
             "<class 'float'>\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Qcvj78eemPGF",
-        "colab_type": "text"
+        "id": "Qcvj78eemPGF"
       },
       "source": [
         "### <a name='a2'> </a> 3. Wektor"
@@ -153,11 +142,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "_qWeeuEXlgIn",
-        "colab_type": "code",
-        "outputId": "5fee308e-383d-435c-c697-8ab304f1b97f",
+        "outputId": "8c61ae74-1dbc-4c64-ad42-4f053646396b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -169,10 +156,11 @@
         "print(f'Rząd: {vector.ndim}')\n",
         "print(f'Długość: {len(vector)}')"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[ 2  4 -6  5]\n",
             "<class 'numpy.ndarray'>\n",
@@ -180,8 +168,7 @@
             "Typ danych wektora: int64\n",
             "Rząd: 1\n",
             "Długość: 4\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -189,11 +176,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "SLC9_Tr18XoS",
-        "colab_type": "code",
-        "outputId": "f95b4ee0-1398-49ae-88e2-bd84dfc8de44",
+        "outputId": "eaea344c-482d-47fe-b1b2-ff673fc2e3db",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -201,23 +186,22 @@
         "print(vector)\n",
         "print(f'Typ danych wektora: {vector.dtype}')\n"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[ 2.  4. -6.  5.]\n",
             "Typ danych wektora: float64\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RWoPx0u_my07",
-        "colab_type": "text"
+        "id": "RWoPx0u_my07"
       },
       "source": [
         "### <a name='a3'> </a> 4.Tablica ~ Macierz"
@@ -227,11 +211,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "DB3HvPORmZn0",
-        "colab_type": "code",
-        "outputId": "26ca885f-57db-4554-bb12-883a4c308496",
+        "outputId": "9b322ae3-a8e5-48aa-8d6e-996f2c00ef8a",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -244,10 +226,11 @@
         "print(f'Rząd: {array.ndim}')\n",
         "print(f'Długosc: {len(array)}')"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[ 2  6  3]\n",
             " [ 5 -3  4]]\n",
@@ -256,8 +239,7 @@
             "Typ danych macierzy: int64\n",
             "Rząd: 2\n",
             "Długosc: 2\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -265,11 +247,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "1FCcwxPA9QnP",
-        "colab_type": "code",
-        "outputId": "14cb691c-1df2-45b5-a8a2-013e1d6bbc59",
+        "outputId": "9b760c2e-53e3-48d8-e74c-17db9a97f7e7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -282,10 +262,11 @@
         "print(f'Rząd: {array.ndim}')\n",
         "print(f'Długosc: {len(array)}')"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[2. 6. 3.]\n",
             " [5. 3. 4.]\n",
@@ -294,16 +275,14 @@
             "Typ danych macierzy: float64\n",
             "Rząd: 2\n",
             "Długosc: 3\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1ytwRCbmwZJm",
-        "colab_type": "text"
+        "id": "1ytwRCbmwZJm"
       },
       "source": [
         "### <a name='a4'> </a> 5. Tensor"
@@ -313,11 +292,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "l1fU34EZqB5P",
-        "colab_type": "code",
-        "outputId": "f13a568e-62d5-4ab0-c0a1-7d65e716f07a",
+        "outputId": "bc6c8bef-4059-4380-ac07-1f94196f068f",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -335,10 +312,11 @@
         "print(f'Rząd: {tensor.ndim}')\n",
         "print(f'Długosc: {len(tensor)}')"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[[1 2 3]\n",
             "  [4 5 6]]\n",
@@ -350,8 +328,7 @@
             "Typ danych macierzy: int64\n",
             "Rząd: 3\n",
             "Długosc: 2\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -359,11 +336,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "0VeCFi0uuwcj",
-        "colab_type": "code",
-        "outputId": "c8e84f4a-199d-4221-e5be-32c8c0841664",
+        "outputId": "cd7e09ca-f09d-4548-a8b2-251f4847ccb0",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 246
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -383,10 +358,11 @@
         "print(f'Rząd: {tensor.ndim}')\n",
         "print(f'Długosc: {len(tensor)}')"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[[1 2 3]\n",
             "  [4 5 6]]\n",
@@ -401,8 +377,7 @@
             "Typ danych macierzy: int64\n",
             "Rząd: 3\n",
             "Długosc: 3\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -410,11 +385,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "1FA_o1KXwfcO",
-        "colab_type": "code",
-        "outputId": "cd281b9d-6a1d-4929-e99a-de543fc46e42",
+        "outputId": "85601879-16f6-46cc-e969-45ca8ee88f0f",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 439
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -443,10 +416,11 @@
         "print(f'Rząd: {tensor.ndim}')\n",
         "print(f'Długosc: {len(tensor)}')"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[[1 2 3 4]\n",
             "  [4 5 6 4]\n",
@@ -472,8 +446,7 @@
             "Typ danych macierzy: int64\n",
             "Rząd: 3\n",
             "Długosc: 5\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -481,17 +454,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "xc0yqHl19-I5",
-        "colab_type": "code",
-        "outputId": "47d7d2c4-181d-4b39-f02e-c996d42cf561",
+        "outputId": "8d3a690e-b5b7-4bdd-8d17-d7f1c9358ed5",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 351
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "tensor"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,9 +489,7 @@
               "        [8, 2, 7, 0]]])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 11
         }
       ]
@@ -529,17 +498,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "g5-Jsx0ww6BH",
-        "colab_type": "code",
-        "outputId": "373f0a71-5044-4aca-8ea1-853a59096dfc",
+        "outputId": "176dd7e2-251c-4595-8ab5-9254f232fca7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "tensor[0]"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -550,9 +517,7 @@
               "       [4, 2, 5, 2]])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 12
         }
       ]
@@ -561,17 +526,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "9AUo01Hq98DM",
-        "colab_type": "code",
-        "outputId": "2a360e86-1c47-4560-b3a4-00e7f3bba6f7",
+        "outputId": "4a9aeffb-ebfe-42b6-eb49-b0c84bd0e7b5",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 140
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "tensor[0:2]"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,9 +549,7 @@
               "        [5, 2, 4, 3]]])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 13
         }
       ]
