--- a/02_basics/03_loss_functions.ipynb
+++ b/02_basics/03_loss_functions.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krakowiakpawel9/neural-network-course/blob/master/02_basics/03_loss_functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MikolajWasowski/neural-network-course/blob/master/02_basics/03_loss_functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -52,37 +52,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YT-REXq_ghEj",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e7c45c8b-8bae-4b78-9d0f-48d71c1176b0"
-      },
-      "source": [
-        "# Przygotowanie środowiska do pracy z Tensorflow 2.0.\n",
-        "# Jeśli otrzymasz błąd podczas instalacji Tensorflow uruchom tę komórkę raz jeszcze.\n",
-        "\n",
-        "!pip uninstall -y tensorflow\n",
-        "!pip install -q tensorflow==2.0.0"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found existing installation: tensorflow 2.0.0\n",
-            "Uninstalling tensorflow-2.0.0:\n",
-            "  Successfully uninstalled tensorflow-2.0.0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "KVlLr1EBD3nj",
-        "outputId": "70683aeb-f8ed-4083-d983-ddbcab29d18b",
+        "outputId": "605b0a70-caf4-4dfd-a6c3-f4369915285a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -92,16 +63,68 @@
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.15.0'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lyxtFjeeGECa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1e5defbf-dfec-420a-86e4-2bb78281ad55"
+      },
+      "source": [
+        "import numpy as np\n",
+        "np.set_printoptions(precision=6, suppress=True)\n",
+        "\n",
+        "def entropy(labels, base=None):\n",
+        "    from math import log, e\n",
+        "    n_labels = len(labels)\n",
+        "\n",
+        "    if n_labels <= 1:\n",
+        "        return 0\n",
+        "\n",
+        "    value, counts = np.unique(labels, return_counts=True)\n",
+        "    probs = counts / n_labels\n",
+        "    n_classes = np.count_nonzero(probs)\n",
+        "\n",
+        "    if n_classes <= 1:\n",
+        "        return 0\n",
+        "\n",
+        "    ent = 0.\n",
+        "\n",
+        "    base = e if base is None else base\n",
+        "    for i in probs:\n",
+        "        ent -= i * log(i, base)\n",
+        "    return ent\n",
+        "\n",
+        "\n",
+        "labels = [1,3,5,2,3,5,3,2,1,3,4,5]\n",
+        "entropy(labels)"
+      ],
       "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
-              "'2.0.0'"
+              "1.5171063970610277"
             ]
           },
           "metadata": {},
@@ -112,73 +135,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lyxtFjeeGECa",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "4eb95c04-19a6-4202-e4a0-43823d663f7e"
-      },
-      "source": [
-        "import numpy as np\n",
-        "np.set_printoptions(precision=6, suppress=True)\n",
-        "\n",
-        "def entropy(labels, base=None):\n",
-        "    from math import log, e\n",
-        "    n_labels = len(labels)\n",
-        "    \n",
-        "    if n_labels <= 1:\n",
-        "        return 0\n",
-        "    \n",
-        "    value, counts = np.unique(labels, return_counts=True)\n",
-        "    probs = counts / n_labels\n",
-        "    n_classes = np.count_nonzero(probs)\n",
-        "    \n",
-        "    if n_classes <= 1:\n",
-        "        return 0\n",
-        "    \n",
-        "    ent = 0.\n",
-        "    \n",
-        "    base = e if base is None else base\n",
-        "    for i in probs:\n",
-        "        ent -= i * log(i, base)\n",
-        "    return ent\n",
-        "\n",
-        "\n",
-        "labels = [1,3,5,2,3,5,3,2,1,3,4,5]\n",
-        "entropy(labels)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.5171063970610277"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "c_7m4M8MZkHp",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "42878062-c4bd-4926-a01f-a368e6144bee"
+        "outputId": "1d4c1b05-d59c-4c4c-cf89-00278c4867bc"
       },
       "source": [
         "labels = [3, 3, 3, 3, 3, 3, 3]\n",
         "entropy(labels)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,9 +154,7 @@
               "0"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 3
         }
       ]
@@ -209,10 +174,9 @@
       "metadata": {
         "id": "gXA1CKEAbs6e",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "56244a86-f2c5-4740-9851-edb365d73368"
+        "outputId": "17b96e22-7497-4aa9-9369-8606bee1004b"
       },
       "source": [
         "from tensorflow.keras.losses import binary_crossentropy\n",
@@ -222,18 +186,16 @@
         "\n",
         "binary_crossentropy(y_true, y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: id=23, shape=(), dtype=float64, numpy=2.5708247450663957>"
+              "<tf.Tensor: shape=(), dtype=float64, numpy=2.5708247450663957>"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 4
         }
       ]
@@ -253,10 +215,9 @@
       "metadata": {
         "id": "PXCV2LIlanLc",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2cc151e6-0c87-49b0-b08d-1c08531c24e7"
+        "outputId": "bfc05adb-0f8d-4a63-ea24-77dd9be27415"
       },
       "source": [
         "from tensorflow.keras.losses import categorical_crossentropy\n",
@@ -266,18 +227,16 @@
         "\n",
         "categorical_crossentropy(y_true, y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: id=39, shape=(), dtype=float64, numpy=30.23015636684835>"
+              "<tf.Tensor: shape=(), dtype=float64, numpy=30.23015636684835>"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 5
         }
       ]
@@ -287,10 +246,9 @@
       "metadata": {
         "id": "16rmIAP2hwN3",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "22438b67-050f-4f7a-a975-e2340df3bccf"
+        "outputId": "22f87530-72aa-4f93-8446-c2668835df0e"
       },
       "source": [
         "y_true = np.array([0, 0, 1, 1, 2, 0, 1, 1, 2], dtype='float')\n",
@@ -298,18 +256,16 @@
         "\n",
         "categorical_crossentropy(y_true, y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: id=55, shape=(), dtype=float64, numpy=44.03324440481406>"
+              "<tf.Tensor: shape=(), dtype=float64, numpy=44.03324440481406>"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 6
         }
       ]
